--- a/index.html
+++ b/index.html
@@ -254,6 +254,34 @@
         </div>
     </div>
     </section>
+    <br>
+    <section id="contact">
+      <h1 class="text-center text-white" ><span class="cor-rosa-tx">CUSTOMER'S </span> REVIEW</h1>
+      <br>
+      <div class="container ">
+        <div class="row">
+          <iframe class="map col " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30153.788252261566!2d72.82321484621745!3d19.141690214227783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1629452077891!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+          
+          <form class="bg-dark col p-5 text-white" >
+            <h1 class="text-white text-center">GET IN TOUCH</h1>
+            <div class="mb-3 ">
+              <span class="fas fa-user"></span>
+              <input type="text" class="form-control bg-black text-white" placeholder="First name" aria-label="First name">
+            </div>
+            <div class="mb-3 " >
+              <span class="fas fa-envelope"></span>
+              <input type="email" class="form-control bg-black text-white" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email">
+            </div>
+            <div class="mb-3 ">
+              <span class="fas fa-phone"></span>
+              <input type="te" class="form-control bg-black text-white" id="exampleInputPassword1" placeholder="nuber">
+            </div>
+            <button type="submit" class="btn hover-btn  m-auto d-block " style="width: 150px;">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <br><br>
 
 
     <script src="https://kit.fontawesome.com/fc83a5f384.js" crossorigin="anonymous"></script>
