--- a/index.html
+++ b/index.html
@@ -40,25 +40,65 @@
               </li>
             </ul>
             <form class="d-flex me-5">
-              <input class="form-control me-2 d-none" type="search" placeholder="Search" aria-label="Search" id="pesquisa">
-              <div class="btn hover fas fa-search border-0 fs-4 " type="submit" id="pesquisa" >
+              <input class="form-control me-2 search" type="search" placeholder="Search" aria-label="Search" id="search" >
+              <div class="btn hover fas fa-search border-0 fs-4 " type="submit" id="pesquisa" onclick="pesquisa()" >
               </div>
-              <div class="btn hover fas fa-shopping-cart border-0 fs-4" type="submit" id="pesquisa" ></div>
+              <div class="btn hover fas fa-shopping-cart border-0 fs-4" type="submit" id="carrinho" onclick="cart()" ></div>
             </form>
           </div>
         </div>
     </nav>
-    <img src="images/home-img.jpeg" alt="home-img" class="img-home">
+    <div class="img-fundo overflow-hidden"><img src="images/home-img.jpeg" alt="home-img" class="img-home"></div>
     <div class="position-absolute title-position">
         <h1 class="fw-bolder ">FRESH COFFEE IN THE MORNING</h1>
         <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Placeat Labore, Sint Cupiditate Distinctio Tempora Reiciendis.</p>
         <button class="hover-btn ">Get Yours Now</button>
     </div>
     <br>
+
+    <div class="cart-items-container position-absolute bg-white cart-itens text-center p-4" id="cart">
+      <div class="cart-item d-flex mb-3">
+          <img src="images/cart-item-1.png" alt="" style="width: 90px;">
+          <div class="content">
+              <h3 class="fs-4">cart item 01</h3>
+              <div class="price cor-rosa-tx">$15.99/-</div>
+          </div>
+          <span class="fas fa-times ms-3"></span>
+      </div>
+
+      <div class="cart-item d-flex mb-3">
+          <img src="images/cart-item-2.png" alt="" style="width: 90px;">
+          <div class="content">
+              <h3 class="fs-4">cart item 02</h3>
+              <div class="price cor-rosa-tx">$15.99/-</div>
+          </div>
+          <span class="fas fa-times ms-3"></span>
+      </div>
+
+      <div class="cart-item d-flex mb-3">
+          <img src="images/cart-item-3.png" alt="" style="width: 90px;">
+          <div class="content ">
+              <h3 class="fs-4">cart item 03</h3>
+              <div class="price cor-rosa-tx">$15.99/-</div>
+          </div>
+          <span class="fas fa-times ms-3"></span>
+      </div>
+
+      <div class="cart-item d-flex mb-3">
+          <img src="images/cart-item-4.png" alt="" style="width: 90px;">
+          <div class="content">
+              <h3 class="fs-4">cart item 04</h3>
+              <div class="price cor-rosa-tx">$15.99/-</div>
+          </div>
+          <span class="fas fa-times ms-3"></span>
+      </div>
+      <a href="#" class="btn hover-btn">checkout now</a>
+
+  </div>
     <section id="about">
       <h1 class="text-center text-white" ><span class="cor-rosa-tx">ABOUT</span> US</h1>
       <br>
-      <div class="card mb-3 m-auto bg-dark text-white" style="max-width: 85%;">
+      <div class="card mb-3 m-auto bg-dark text-white" >
           <div class="row g-0">
             <div class="col-md-6">
               <img src="images/about-img.jpeg" class="img-fluid rounded-start img-card" alt="about">
@@ -66,7 +106,7 @@
             <div class="col-md-6">
               <div class="card-body  p-5">
                 <h1 class="card-title fs-4">What Makes Our Coffee Special? </h1>
-                <p class="card-text fs-6 ">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Voluptatibus Qui Ea Ullam, Enim Tempora Ipsum Fuga Alias Quae Ratione A Officiis Id Temporibus Autem? Quod Nemo Facilis Cupiditate. Ex, Vel?</p>
+                <p class="card-text  ">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Voluptatibus Qui Ea Ullam, Enim Tempora Ipsum Fuga Alias Quae Ratione A Officiis Id Temporibus Autem? Quod Nemo Facilis Cupiditate. Ex, Vel?</p>
                   <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Odit Amet Enim Quod Veritatis, Nihil Voluptas Culpa! Neque Consectetur Obcaecati Sapiente?</p>
                 <button class="hover-btn mt-2">Learn More</button>
               </div>
@@ -92,7 +132,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tasty And Healty</h5>
                 <p class="card-text fs-4">$15.99 <span class="fs-6 text-decoration-line-through">20.99</span></p>
-                <a href="#" class="hover-btn">Go somewhere</a>
+                <a href="#" class="hover-btn">add To Cart</a>
               </div>
           </div>
           <div class="card p-5 hover-cards borda mb-3 text-center" style="width: 21rem;">
@@ -100,7 +140,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tasty And Healty</h5>
                 <p class="card-text fs-4">$15.99 <span class="fs-6 text-decoration-line-through">20.99</span></p>
-                <a href="#" class="hover-btn">Go somewhere</a>
+                <a href="#" class="hover-btn">add To Cart</a>
               </div>
           </div>
           <div class="card p-5 borda hover-cards mb-3 text-center" style="width: 21rem;">
@@ -108,7 +148,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tasty And Healty</h5>
                 <p class="card-text fs-4">$15.99 <span class="fs-6 text-decoration-line-through">20.99</span></p>
-                <a href="#" class="hover-btn">Go somewhere</a>
+                <a href="#" class="hover-btn">add To Cart</a>
               </div>
           </div>
           <div class="card p-5 hover-cards borda mb-3 text-center" style="width: 21rem;">
@@ -116,7 +156,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tasty And Healty</h5>
                 <p class="card-text fs-4 ">$15.99 <span class="fs-6 text-decoration-line-through">20.99</span></p>
-                <a href="#" class="hover-btn">Go somewhere</a>
+                <a href="#" class="hover-btn">add To Cart</a>
               </div>
           </div>
           <div class="card p-5 hover-cards borda mb-3 text-center" style="width: 21rem;">
@@ -124,7 +164,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tasty And Healty</h5>
                 <p class="card-text fs-4">$15.99 <span class="fs-6 text-decoration-line-through">20.99</span></p>
-                <a href="#" class="hover-btn">Go somewhere</a>
+                <a href="#" class="hover-btn">add To Cart</a>
               </div>
           </div>
       </div>
@@ -332,28 +372,39 @@
       <br>
       <div class="container text-center ">
         <div class="text-capitalize">
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF ">about</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">home</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">menu</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">blogs</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">products</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">review</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda linkF">contact</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF ">about</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">home</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">menu</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">blogs</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">products</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">review</a>
+          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">contact</a>
       </div>
       </div>
       <br><br>
       <h5 class="text-center text-white fw-light fw-6 ">Created By <span class="cor-rosa-tx">Mr. Web Designer</span> | All Rights Reserved </h5>
 
     </footer>
-    <script>
-      function pesquisar(){
-        $('pesquisa')
-      }
-      
-    </script>
-
 
     <script src="https://kit.fontawesome.com/fc83a5f384.js" crossorigin="anonymous"></script>
     <script src="css/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+ 
+    <script>
+      function pesquisa(){
+        $(".search").toggleClass('activeSeach')
+        window.onscroll = () => {
+          $(".search").removeClass('activeSeach')
+        }
+      }
+
+      function cart(){
+        $('.cart-itens').toggleClass('activecart')
+        window.onscroll = () => {
+          $('.cart-itens').removeClass('activecart')
+        }
+      }
+      
+    </script>
 </body>
 </html>
