--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
       <br>
       <div class="container text-center ">
         <div class="text-capitalize">
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF ">about</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">home</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">menu</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">blogs</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">products</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">review</a>
-          <a href="#" class="text-decoration-none text-white m-1 borda d-inline-block linkF">contact</a>
+          <a href="#about" class="text-decoration-none text-white m-1 borda d-inline-block linkF ">about</a>
+          <a href="#H" class="text-decoration-none text-white m-1 borda d-inline-block linkF">Home</a>
+          <a href="#menu" class="text-decoration-none text-white m-1 borda d-inline-block linkF">menu</a>
+          <a href="#blogs" class="text-decoration-none text-white m-1 borda d-inline-block linkF">blogs</a>
+          <a href="#produtos" class="text-decoration-none text-white m-1 borda d-inline-block linkF">products</a>
+          <a href="#review" class="text-decoration-none text-white m-1 borda d-inline-block linkF">review</a>
+          <a href="#contact" class="text-decoration-none text-white m-1 borda d-inline-block linkF">contact</a>
       </div>
       </div>
       <br><br>
